--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@ E-mail: qsong4@gmu.edu</p>
 </ul>
 <h3>Recent Publications </h3>
 <ol>
-<li><p><b>[ACSAC21]</b> Qiyang Song, Jiahao Cao, Kun Sun, Qi Li, and Ke Xu. (2021). &ldquo;Try before You Buy: Privacy-preserving Data Evaluation on Cloud-based Machine Learning Data Marketplace.&rdquo; ACSAC 2021.</p>
+<li><p><b>[ACSAC21]</b> Qiyang Song, Jiahao Cao, Kun Sun, Qi Li, and Ke Xu. (2021). &ldquo;Try before You Buy: Privacy-preserving Data Evaluation on Cloud-based Machine Learning Data Marketplace.&rdquo; ACSAC 2021.[<a href="pub/acsac21-56.pdf">pdf</a>] [<a href="slides/ACSAC21-slides.pdf">slides</a>] [<a href="https://drive.google.com/file/d/1gTaq4ribAcKzO3hlI1OLH5Hcrq-OUiOp/view?usp=sharing">video</a>]</p>
 </li>
-<li><p><b>[TIFS]</b> Qiyang Song, Zhuotao Liu, Jiahao Cao, Kun Sun, Qi Li, and Cong Wang. &ldquo;SAP-SSE: Protecting Search Patterns and Access Patterns in Searchable Symmetric Encryption.&rdquo; IEEE Transactions on Information Forensics and Security (TIFS) 16 (2020): 1795-1809. </p>
+<li><p><b>[TIFS]</b> Qiyang Song, Zhuotao Liu, Jiahao Cao, Kun Sun, Qi Li, and Cong Wang. &ldquo;SAP-SSE: Protecting Search Patterns and Access Patterns in Searchable Symmetric Encryption.&rdquo; IEEE Transactions on Information Forensics and Security (TIFS) 16 (2020): 1795-1809. [<a href="pub/SAP-SSE.pdf">pdf</a>]</p>
 </li>
-<li><p><b>[TKDE]</b> Haoda Li, Qiyang Song, Guoliang Li, Qi Li, Rengui Wang. &ldquo;GPSC: A Grid-based Privacy-reserving Framework for Online Spatial Crowdsourcing.&rdquo; IEEE Transactions on Knowledge and Data Engineering (TKDE) (2021). </p>
+<li><p><b>[TKDE]</b> Haoda Li, Qiyang Song, Guoliang Li, Qi Li, Rengui Wang. &ldquo;GPSC: A Grid-based Privacy-reserving Framework for Online Spatial Crowdsourcing.&rdquo; IEEE Transactions on Knowledge and Data Engineering (TKDE) (2021). [<a href="pub/GPSC.pdf">pdf</a>]</p>
 </li>
-<li><p><b>[SecureCOM2020]</b> Songsong Liu, Qiyang Song, Kun Sun, and Qi Li. &ldquo;SGX-Cube: An SGX-Enhanced Single Sign-On System Against Server-Side Credential Leakage.&rdquo; International Conference on Security and Privacy in Communication Systems (SecureCom). Springer, Cham, 2020.</p>
+<li><p><b>[SecureCOM2020]</b> Songsong Liu, Qiyang Song, Kun Sun, and Qi Li. &ldquo;SGX-Cube: An SGX-Enhanced Single Sign-On System Against Server-Side Credential Leakage.&rdquo; International Conference on Security and Privacy in Communication Systems (SecureCom). Springer, Cham, 2020. [<a href="pub/SecureComm2020_SGX_SSO.pdf">pdf</a>]</p>
 </li>
-<li><p><b>[DSC2019]</b> Choi, Isabelle, Qiyang Song, and Kun Sun. &ldquo;Federated-Cloud Based Deep Neural Networks with Privacy Preserving Image Filtering Techniques.&rdquo; 2019 IEEE Conference on Dependable and Secure Computing (DSC). IEEE, 2019.</p>
+<li><p><b>[DSC2019]</b> Choi, Isabelle, Qiyang Song, and Kun Sun. &ldquo;Federated-Cloud Based Deep Neural Networks with Privacy Preserving Image Filtering Techniques.&rdquo; 2019 IEEE Conference on Dependable and Secure Computing (DSC). IEEE, 2019. [<a href="pub/Federated-Cloud_Based_Deep_Neural_Networks_with_Privacy_Preserving_Image_Filtering_Techniques.pdf">pdf</a>] [<a href="slides/IDSC2019.pptx">slides</a>]</p>
 </li>
-<li><p><b>[GlobalCOM2019]</b> Shengsheng Yao, Mingwei Xu, Qi Li, Jiahao Cao, and Qiyang Song. &ldquo;cSFC: Building Credible Service Function Chain on the Cloud.&rdquo; 2019 IEEE Global Communications Conference (GLOBECOM). IEEE, 2019. (CCF C)</p>
+<li><p><b>[GlobalCOM2019]</b> Shengsheng Yao, Mingwei Xu, Qi Li, Jiahao Cao, and Qiyang Song. &ldquo;cSFC: Building Credible Service Function Chain on the Cloud.&rdquo; 2019 IEEE Global Communications Conference (GLOBECOM). IEEE, 2019. [<a href="pub/cSFC_Building_Credible_Service_Function_Chain_on_the_Cloud.pdf">pdf</a>]</p>
 </li>
-<li><p><b>[CNS2019]</b> Peiyi Han, Chuanyi Liu, Yingfei Dong, Hezhong Pan, Qiyang Song, and Binxing Fang. &ldquo;FileCrypt: Transparent and scalable protection of sensitive data in browser-based cloud storage.&rdquo; 2019 IEEE Conference on Communications and Network Security (CNS). IEEE, 2019.</p>
+<li><p><b>[CNS2019]</b> Peiyi Han, Chuanyi Liu, Yingfei Dong, Hezhong Pan, Qiyang Song, and Binxing Fang. &ldquo;FileCrypt: Transparent and scalable protection of sensitive data in browser-based cloud storage.&rdquo; 2019 IEEE Conference on Communications and Network Security (CNS). IEEE, 2019. [<a href="pub/FileCrypt_Transparent_and_Scalable_Protection_of_Sensitive_Data_in_Browser-based_Cloud_Storage.pdf">pdf</a>]</p>
 </li>
 </ol>
 </td>
