--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ E-mail: qsong4@gmu.edu</p>
 <li><p>Machine Learning Security</p>
 </li>
 </ul>
-<h2>Recent Publications </h2>
+<h2>Recent Publication</h2>
 <ol>
 <li><p><b>[ACSAC21]</b> Qiyang Song, Jiahao Cao, Kun Sun, Qi Li, and Ke Xu. (2021). &ldquo;Try before You Buy: Privacy-preserving Data Evaluation on Cloud-based Machine Learning Data Marketplace.&rdquo; ACSAC 2021.[<a href="pub/acsac21-56.pdf">pdf</a>] [<a href="slides/ACSAC21-slides.pdf">slides</a>] [<a href="https://drive.google.com/file/d/1gTaq4ribAcKzO3hlI1OLH5Hcrq-OUiOp/view?usp=sharing">video</a>]</p>
 </li>
