--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@ Phone: (+86)18200268693 <br />
 E-mail: qsong4@gmu.edu</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I received the B.S. degree in Information Security from University of Electronic and Science Techology of China (<a href="https://en.uestc.edu.cn">UESTC</a>), in 2017. Then, I received the M.S. degree in Computer Science and Techology from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>, in 2020. Now, I am a first-year Ph.D. student at George Mason University (<a href="https://www.gmu.edu">GMU</a>), advised by <a href="https://csis.gmu.edu/ksun/">Prof. Kun Sun</a>.  </p>
+<p>I received the B.S. degree in Information Security from University of Electronic and Science Techology of China (<a href="https://en.uestc.edu.cn">UESTC</a>), in 2017. Then, I received the M.S. degree in Computer Science and Techology from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>, in 2020. Now, I am a first-year Ph.D. student at George Mason University (<a href="https://www.gmu.edu">GMU</a>).  </p>
 <h2>Research</h2>
-<p>My research interests include </p>
+<p>My current research interests include </p>
 <ul>
-<li><p>Automatic Patching</p>
+<li><p>Web3 Security</p>
 </li>
 <li><p>Software Security</p>
 </li>
 <li><p>Cloud Security</p>
-</li>
-<li><p>Machine Learning Security</p>
 </li>
 </ul>
 <h2>Recent Publication</h2>
